Removed Static Abuse